--- a/bank_service/src/main/resources/application.properties
+++ b/bank_service/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+server.port=8081
 
+server.servlet.context-path=/BankingServices
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/usecase_14042020?serverTimezone=IST&useLegacyDatetimeCode=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.username=root
+spring.datasource.password=root
+logging.level.root=INFO
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.application.name=bank-service
+eureka.client.registerWithEureka=true
+eureka.client.serviceUrl.defaultZone=${EUREKA_HOSTNAME:http://localhost:8761}/eureka/
+eureka.client.serviceUrl.registry-fetch-interval-seconds: 5
+server.ribbon.eureka.enabled=true
+server.ribbon.listOfServers=localhost:9091,localhost:9092
+server.ribbon.ServerListRefreshInterval=1000
