--- a/bank_service/src/main/resources/application.properties
+++ b/bank_service/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.port=8081
 
-server.servlet.context-path=/BankingServices
+server.servlet.context-path=/BankingService
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/usecase_14042020?serverTimezone=IST&useLegacyDatetimeCode=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.username=root
 spring.datasource.password=root
 logging.level.root=INFO
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.application.name=bank-service
 eureka.client.registerWithEureka=true
