--- a/bank_service/src/main/resources/application.properties
+++ b/bank_service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8082
 
 server.servlet.context-path=/BankingService
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -13,6 +13,6 @@ spring.application.name=bank-service
 eureka.client.registerWithEureka=true
 eureka.client.serviceUrl.defaultZone=${EUREKA_HOSTNAME:http://localhost:8761}/eureka/
 eureka.client.serviceUrl.registry-fetch-interval-seconds: 5
-server.ribbon.eureka.enabled=true
-server.ribbon.listOfServers=localhost:9091,localhost:9092
-server.ribbon.ServerListRefreshInterval=1000
+#server.ribbon.eureka.enabled=true
+#server.ribbon.listOfServers=localhost:9091,localhost:9092
+#server.ribbon.ServerListRefreshInterval=1000
