--- a/mobile_service/src/main/resources/application.properties
+++ b/mobile_service/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.username=root
 spring.datasource.password=root
 logging.level.root=INFO
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.application.name=mobile-service
 eureka.client.registerWithEureka=true
